--- a/blocks/popup/__btn-close/popup__btn-close.css
+++ b/blocks/popup/__btn-close/popup__btn-close.css
@@ -1,15 +1,16 @@
 .popup__btn-close {
-  width: 20px;
-  height: 20px;
+  background-image: url(../../../images/popup-Close-btn.svg);
+  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0);
+  background-size: contain;
+  min-width: 20px;
+  min-height: 20px;
   text-decoration: none;
-  color: #FFFFFF;
-  font-size: 20px;
   position: absolute;
   top: -10%;
   right: -1%;
   padding: 0;
   border: none;
-  background: repeat;
   cursor: pointer;
 }
 
@@ -20,10 +21,9 @@
 
 @media screen and (min-width: 768px) {
   .popup__btn-close {
-    width: 32px;
-    height: 32px;
+    min-width: 32px;
+    min-height: 32px;
     top: -12%;
     right: -10%;
-    font-size: xx-large;
   }
 }
