--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -2,7 +2,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  max-width: 282px;
+  background-color: #FFFFFF;
+  margin: 0;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
   position: relative;
   opacity: 1;
+  padding-left: 22px;
+  padding-right: 22px;
+}
+
+@media screen and (min-width: 768px) {
+  .popup__content {
+    padding-left: 36px;
+    padding-right: 36px;
+    max-width: 430px;
+  }
 }
