--- a/blocks/popup/__profile-description/popup__profile-description.css
+++ b/blocks/popup/__profile-description/popup__profile-description.css
@@ -1,9 +1,14 @@
 .popup__profile-description {
-  width: 238px;
-  margin-left: auto;
-  margin-right: auto;
+  font-family: 'Inter', 'Arial', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  min-width: 238px;
+  margin: 0;
   margin-top: 30px;
   margin-bottom: 45px;
+  padding: 0 0 13px 0;
   border-color: white;
   border-style: none;
   border-bottom: 1px solid #cecdcd;
@@ -15,7 +20,7 @@
 
 @media screen and (min-width: 768px) {
   .popup__profile-description {
-    width: 358px;
+    min-width: 358px;
     margin-bottom: 48px;
   }
 }
