--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -3,10 +3,5 @@
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  color: #000000;
+  display: contents;
 }
