--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,18 +1,18 @@
 .popup__title {
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 18px;
   line-height: 22px;
   color: #000000;
-  margin: auto;
+  margin: 0;
   margin-top: 25px;
 }
 
 @media screen and (min-width: 768px) {
   .popup__title {
     font-size: 24px;
-    line-height: 29.05px;
+    line-height: 29px;
     margin-top: 34px;
   }
 }
