--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,10 +1,14 @@
 .popup {
-  width:100%;
-  min-height:100%;
-  background-color: rgba(0,0,0,0.5);
-  overflow:hidden;
-  position:fixed;
-  top:0px;
+  width: 100%;
+  min-height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  top: 0px;
   left: 0px;
   opacity: 0;
   visibility: hidden;
