--- a/blocks/profile/__name-field/profile__name-field.css
+++ b/blocks/profile/__name-field/profile__name-field.css
@@ -2,10 +2,14 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: auto;
+  max-width: 282px;
 }
 
 @media screen and (min-width: 768px) {
   .profile__name-field {
     justify-content: start;
+    margin: 0;
+    max-width: fit-content;
   }
 }
