--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,7 +1,7 @@
 .profile__name {
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
-  color: #FFFFFF;
+  color: #FFF;
   font-weight: 500;
   font-size: 27px;
   line-height: 33px;
