--- a/blocks/card/__heart/card__heart.css
+++ b/blocks/card/__heart/card__heart.css
@@ -1,4 +1,4 @@
-.elements__heart {
+.card__heart {
   min-width: 22px;
   min-height: 19px;
   background-image: url(../../../images/elements-heart.svg);
@@ -8,15 +8,18 @@
   background-repeat: no-repeat;
   padding: 0;
   margin: auto;
-  margin-left: 21px;
-  margin-right: 20px;
+  margin-right: 19px;
   color: inherit;
   font: inherit;
   border: none;
   cursor: pointer;
 }
 
-.elements__heart:hover {
+.card__heart:hover {
   opacity: 0.5;
   transition: all 0.8s;
+}
+
+.card__heart_active {
+  background-image: url(../../../images/elements-heart-active.svg);
 }
