--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -1,12 +1,12 @@
-.elements__title {
+.card__title {
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  color: #000000;
-  margin: auto;
-  margin-left: 21px;
+  color: #000;
+  padding: 0;
+  margin: 25px 26px 25px 21px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
