--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,7 +8,7 @@
   border: 0;
   border-bottom: 1px;
   border-style: solid;
-  border-color: #545454;
+  border-color: rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (min-width: 768px) {
