--- a/blocks/popup/__btn-save/popup__btn-save.css
+++ b/blocks/popup/__btn-save/popup__btn-save.css
@@ -3,14 +3,15 @@
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 16.94px;
+  line-height: 17px;
   text-align: center;
-  color: #FFFFFF;
+  color: #FFF;
   min-width: 238px;
   min-height: 46px;
-  background: #000000;
+  background: #000;
   border-radius: 2px;
   margin: 0;
+  margin-top: 13px;
   margin-bottom: 25px;
   padding: 0;
   cursor: pointer;
@@ -27,6 +28,7 @@
     line-height: 22px;
     min-width: 358px;
     min-height: 50px;
+    margin-top: 14px;
     margin-bottom: 35px;
   }
 }
