--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   max-width: 282px;
-  background-color: #FFFFFF;
+  background-color: #FFF;
   margin: 0;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
