--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,26 +1,26 @@
-.popup__profile-description {
+.popup__input {
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
+  color: #000;
   min-width: 238px;
   margin: 0;
-  margin-top: 30px;
-  margin-bottom: 45px;
-  padding: 0 0 13px 0;
-  border-color: white;
+  margin-bottom: 30px;
+  padding: 0 0 12px 0;
+  border-color: #FFF;
   border-style: none;
-  border-bottom: 1px solid #cecdcd;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.2);
+  outline: none;
 }
 
-.popup__profile-description:focus {
+.popup__profile-name:focus {
   outline: none;
 }
 
 @media screen and (min-width: 768px) {
-  .popup__profile-description {
+  .popup__profile-name {
     min-width: 358px;
-    margin-bottom: 48px;
   }
 }
