--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,9 +4,10 @@
   font-weight: 900;
   font-size: 18px;
   line-height: 22px;
-  color: #000000;
+  color: #000;
   margin: 0;
   margin-top: 25px;
+  margin-bottom: 71px;
 }
 
 @media screen and (min-width: 768px) {
@@ -14,5 +15,6 @@
     font-size: 24px;
     line-height: 29px;
     margin-top: 34px;
+    margin-bottom: 50px;
   }
 }
