--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,12 +1,12 @@
-.profile__button {
+.profile__add-button {
   margin-top: 32px;
   min-width: 282px;
   height: 50px;
   background-image: url(../../../images/profile-cross.svg);
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  background-color: #000000;
-  border: 2px solid #FFFFFF;
+  background-color: #000;
+  border: 2px solid #FFF;
   border-radius: 2px;
   max-width: 282px;
   margin-left: auto;
@@ -15,15 +15,16 @@
   cursor: pointer;
 }
 
-.profile__button:hover {
+.profile__add-button:hover {
   opacity: 0.6;
   transition: all 1s;
 }
 
 @media screen and (min-width: 768px) {
-  .profile__button {
+  .profile__add-button {
     min-width: 150px;
     max-width: 150px;
     margin: auto 0 auto 0;
+    background-size: 22px;
   }
 }
