--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,7 +1,7 @@
 .profile__description {
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
-  color: #FFFFFF;
+  color: #FFF;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
@@ -18,10 +18,11 @@
   .profile__description {
     font-size: 15px;
     line-height: 19px;
+    margin: 0;
     margin-top: 9px;
+    margin-left: 0;
     text-align: start;
     max-width: 294px;
-    margin: 0;
   }
 }
 
