--- a/pages/index.css
+++ b/pages/index.css
@@ -10,32 +10,31 @@
 @import url(../blocks/content/content.css);
 
 @import url(../blocks/profile/profile.css);
-@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__content/profile__content.css);
 @import url(../blocks/profile/__foto/profile__foto.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name-field/profile__name-field.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__btn-modify/profile__btn-modify.css);
 @import url(../blocks/profile/__description/profile__description.css);
-@import url(../blocks/profile/__button/profile__button.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
 
 @import url(../blocks/elements/elements.css);
-@import url(../blocks/elements/__cards/elements__cards.css);
-@import url(../blocks/elements/__foto/elements__foto.css);
-@import url(../blocks/elements/__caption/elements__caption.css);
-@import url(../blocks/elements/__title/elements__title.css);
-@import url(../blocks/elements/__heart/elements__heart.css);
-@import url(../blocks/elements/__heart-active/elements__heart-active.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__foto/card__foto.css);
+@import url(../blocks/card/__caption/card__caption.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__heart/card__heart.css);
+@import url(../blocks/card/__heart/_active/card__heart_active.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
 @import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__open/popup__open.css);
+@import url(../blocks/popup/_open/popup_opened.css);
 @import url(../blocks/popup/__content/popup__content.css);
 @import url(../blocks/popup/__btn-close/popup__btn-close.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/__text/popup__text.css);
-@import url(../blocks/popup/__profile-name/popup__profile-name.css);
-@import url(../blocks/popup/__profile-description/popup__profile-description.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__btn-save/popup__btn-save.css);
