--- a/blocks/popup/__figure/__image/figure__image.css
+++ b/blocks/popup/__figure/__image/figure__image.css
@@ -1,21 +1,9 @@
  .figure__image {
    min-width: 240px;
+   max-width: 75vw;
    min-height: 299px;
-   max-height: 540px;
-   object-fit: cover;
+   max-height: 75vh;
    width: 100%;
    height: 100%;
    margin: 0;
- }
-
- @media screen and (min-width: 768px) {
-   .figure__image {
-     min-width: 433px;
-   }
- }
-
- @media screen and (min-width: 1024px) {
-   .figure__image {
-     min-width: 816px;
-   }
  }
