--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,4 +1,4 @@
-.popup__btn-close {
+.popup__close {
   background-image: url(../../../images/popup-Close-btn.svg);
   background-repeat: no-repeat;
   background-color: rgba(0, 0, 0, 0);
@@ -14,13 +14,13 @@
   cursor: pointer;
 }
 
-.popup__btn-close:hover {
+.popup__close:hover {
   opacity: 0.6;
   transition: all 1s;
 }
 
 @media screen and (min-width: 768px) {
-  .popup__btn-close {
+  .popup__close {
     min-width: 32px;
     min-height: 32px;
     top: -38px;
