--- a/blocks/profile/__btn-modify/profile__btn-modify.css
+++ b/blocks/profile/__btn-modify/profile__btn-modify.css
@@ -23,7 +23,8 @@
   .profile__btn-modify {
     min-width: 24px;
     min-height: 24px;
-    margin-left: 21px;
+    margin-left: 19px;
+    margin-top: 15px;
     background-size: 10px;
   }
 }
