--- a/blocks/popup/__input/__input-error/popup__input-error.css
+++ b/blocks/popup/__input/__input-error/popup__input-error.css
@@ -6,7 +6,8 @@
   line-height: 15px;
   max-width: 232px;
   color: #FF0000;
-  display: none;
+  opacity: 0;
+  min-height: 30px;
   transition: 0.3s;
   margin: 0;
   margin-top: 5px;
