--- a/pages/index.css
+++ b/pages/index.css
@@ -48,3 +48,4 @@
 @import url(../blocks/popup/__figure/popup__figure.css);
 @import url(../blocks/popup/__figure-image/popup__figure-image.css);
 @import url(../blocks/popup//__figure-caption/popup__figure-caption.css);
+@import url(../blocks/popup/_foto_view/popup_foto_view.css);
