--- a/blocks/card/__foto/card__foto.css
+++ b/blocks/card/__foto/card__foto.css
@@ -1,7 +1,9 @@
 .card__foto {
   border-radius: 10px 10px 0px 0px;
-  width: 282px;
-  height: 282px;
+  min-width: 282px;
+  min-height: 282px;
+  max-width: 282px;
+  max-height: 282px;
   margin: 0;
   cursor: pointer;
 }
