--- a/blocks/profile/__foto/profile__foto.css
+++ b/blocks/profile/__foto/profile__foto.css
@@ -2,14 +2,7 @@
   border-radius: 50%;
   max-width: 120px;
   min-height: 120px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 4px;
-  margin-bottom: 4px;
-}
-
-@media screen and (min-width: 768px) {
-  .profile__foto {
-    margin-right: 26px;
-  }
+  margin: 0;
+  z-index: -1;
+  position: relative;
 }
