--- a/blocks/profile/__btn-avatar/profile__btn-avatar.css
+++ b/blocks/profile/__btn-avatar/profile__btn-avatar.css
@@ -16,10 +16,10 @@
 }
 
 .profile__btn-avatar:hover {
-  background-image: url(../../../images/avatar-pen-btn.svg);
+  background-image: url(../../../src/images/avatar-pen-btn.svg);
   background-color: rgba(0, 0, 0, 0.8);
   background-repeat: no-repeat;
   background-position: 50%;
-  transition: all 1s;
+  transition: all 0.3s;
   cursor: pointer;
 }
