--- a/blocks/card/__btn-delete/card__btn-delete.css
+++ b/blocks/card/__btn-delete/card__btn-delete.css
@@ -1,7 +1,7 @@
 .card__btn-delete {
   min-width: 18px;
   min-height: 19px;
-  background-image: url(../../../images/card-trash.svg);
+  background-image: url(../../../src/images/card-trash.svg);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
