--- a/src/blocks/card/__heart/card__heart.css
+++ b/src/blocks/card/__heart/card__heart.css
@@ -1,7 +1,7 @@
 .card__heart {
   min-width: 22px;
   min-height: 19px;
-  background-image: url(../../../src/images/elements-heart.svg);
+  background-image: url(../../../images/elements-heart.svg);
   background-position: 50%;
   background-size: cover;
   background-color: transparent;
